--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
 }
 
+a{
+ text-decoration: none;
+}
+
 ul{
     list-style: none;
 }
@@ -29,14 +33,20 @@ ul{
 }
 
 .gap{
-    gap: 20px;
+    gap: 30px;
 }
 
+/* Text */
 
-.text-white05{
-    color: rgba( 255, 255, 255, 0.3);
-    text-decoration: none;
+.text-white07{
+    color: rgba( 255, 255, 255, 0.7);
 }
+
+.text-black{
+    color: black;
+}
+
+/* Debug */
 
 .ht-60 {
     height: 60px;
@@ -124,14 +134,16 @@ ul{
     display: inline-block;
 }
 
+.small-btn{
+    border-radius: 20px;
+    padding: 10px;
+    font-size: 15px;
+}
+
 /* Header */
 header {
     height: 70px;
     align-items: center;
-}
-
-.header-logo{
-    background-image: ;
 }
 
 .nav-bar{
