--- a/css/style.css
+++ b/css/style.css
@@ -32,14 +32,31 @@ ul{
 
 }
 
+.mb-20{
+    margin-bottom: 20px;
+
+}
+
+.mb-rt15{
+    margin-right: 15px;
+}
+
 .gap{
     gap: 30px;
 }
 
 /* Text */
 
+.roboto{
+    font-family: "Roboto", sans-serif;
+}
+
 .text-white07{
     color: rgba( 255, 255, 255, 0.7);
+}
+
+.text-white{
+    color: #fff;
 }
 
 .text-black{
@@ -134,10 +151,19 @@ ul{
     display: inline-block;
 }
 
+/* Button */
 .small-btn{
     border-radius: 20px;
     padding: 10px;
-    font-size: 15px;
+    font-size: 0.7rem;
+}
+
+.large-btn{
+    border-radius: 20px;
+    padding: 10px;
+    font-size: 1rem;
+    border: 0;
+
 }
 
 /* Header */
@@ -149,27 +175,43 @@ header {
 .nav-bar{
     justify-content: space-between;
     align-items: center;
-    font-family: "Roboto", sans-serif;
 }
-
-
-/* Hero */
-
-
-.hero-content {
-    width: 50%;
-    margin: 40px auto;
-    border-radius: 5px;
-}
-
-
-
 /* Main */
 
 .main-container {
     width: 100%;
     margin: 0 auto;
+    max-width: 1000px;
 
+}
+
+
+/* Hero */
+.title-hero{
+    font-size: 2rem;
+    font-weight: 500;
+    margin: 50px 0px 20px;
+}
+.hero{
+    background-image: url(../img/jumbo.png);
+    object-fit: cover;
+    background-size: 100%;
+}
+
+.hero-content {
+    width: 50%;
+    margin:0px auto;
+    border-radius: 5px;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 10px
+}
+
+.p-hero{
+    font-size: 1rem;
+    line-height: 1.5;
+    text-align: center;
+    margin-bottom: 10px;
 }
 
 .main-box {
